Fixed responsiveness on header to stop text wrappign into next line. Added different text types to display depening on screen size and max width. Added this to headerIndex, headerRest, with CSS with main.CSS providing responsiveness

--- a/finalDesign/assets/css/main.css
+++ b/finalDesign/assets/css/main.css
@@ -3483,6 +3483,31 @@ input, select, textarea {
 
 				}
 
+				@media screen and (max-width: 400px) {
+
+					#header h1 a {
+						font-size: 0.6em;
+					}
+
+				}
+
+				@media screen and (max-width: 360px) {
+					.short-text { display: block; }
+					.full-text { display: none; }
+				}
+
+				@media screen and (max-width: 310px) {
+					.shortest-text { display: block; }
+					.short-text { display: none; }
+					.full-text { display: none; }
+				}
+
+				@media screen and (max-width: 180px) {
+					.shortest-text { display: none; }
+					.short-text { display: none; }
+					.full-text { display: none; }
+				}
+
 		#header nav {
 			height: inherit;
 			line-height: inherit;
